--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
  
  /* Colors */
   :root {
-    --primary:#4fb0a9;
+    --primary:rgba(255, 127, 80, 0.603);
     --secondary:#f79256;
   }
   /*Color utilities */
-  .corolbg{
-    background-color: var(--primary);
+  .bg-dbrown{
+    background-color: rgba(255, 127, 80, 0.603) !important;
   }
-  .coroltext{
+  .text-dbrown{
     color: var(--primary);
   }
   .corolborder{
