--- a/style.css
+++ b/style.css
@@ -245,13 +245,21 @@ img{
   width: 50%;
   border-radius: 10px;
   border: 2px solid white;
-  background-color: var(--primary);
+  /* background: linear-gradient(90deg, #411b02 0%, #8d4211 100%); */
+  background: linear-gradient(
+    120deg,
+    rgb(255, 174, 145) 30%,
+    coral 88%,
+    bisque 40%,
+    rgb(255, 185, 160) 78%
+  );
 }
 
 .form-heading {
   text-align: center;
-  margin: 2em;
-  color: var(--light);
+  margin-top: 2em;
+  margin-bottom: 1em;
+  color:  #411b02;
   font-size: 1.2em;
   background-color: transparent;
   align-self: center;
@@ -288,18 +296,18 @@ img{
   border: 2px solid black;
   outline: none;
   background-color: transparent;
-  color: #64ffda;
+  /* color: #64ffda; */
   font-weight: bold;
-  outline: 1px solid #64ffda;
+  outline: 1px solid black;
   transition: all ease-in-out 0.3s;
 }
 
 .sendMessage-btn:hover {
   transition: all ease-in-out 0.3s;
-  background-color: #64ffda;
-  color: #000;
+  background-color: var(--light);
+  color: black !important;
   cursor: pointer;
-  box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+  /* box-shadow: inset 2px 5px 10px rgb(5, 5, 5); */
 }
 
 .form-card1 {
@@ -308,9 +316,9 @@ img{
   transition: all 0.3s;
 }
 
-.form-card1:hover {
+/* .form-card1:hover {
   box-shadow: 0px 0px 30px 1px rgba(100, 255, 218, 0.3);
-}
+} */
 
 .form-card2 {
   border-radius: 0;
@@ -323,5 +331,5 @@ img{
 }
 .contact{
   /* background-color: #0a192f; */
-  background-color: var(--tertiary);
+  background-color: bisque;
 }
